--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
 
         <!-- Cấu hình cho MainActivity -->
         <activity
-            android:name=".View.MainActivity"
+            android:name=".View.User.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FDEV">
